# kaem

./: CLAUDE.md  Cargo.toml  README.md
binaries/kaem/: Cargo.toml
binaries/kaem-radio-pipeline/: Cargo.toml
binaries/kaem-radio-pipeline/src/: lib.rs
binaries/kaem-sandbox/: Cargo.toml
binaries/kaem-sandbox/src/: app.rs  crypto_adapter.rs  field.rs  frame_info.rs  main.rs  sandbox.rs  sim_adapter.rs  theme.rs
binaries/kaem-sandbox/src/ui/: chat.rs  field.rs  log.rs  mod.rs  nodes.rs
binaries/kaem/src/: app.rs  main.rs
binaries/kaem/src/core/: chat.rs  mod.rs  model.rs  seed.rs
binaries/kaem/src/tui/: events.rs  mod.rs  render.rs
binaries/kaem/src/tui/screens/chat/: mod.rs
binaries/kaem/src/tui/screens/chat/widgets/: input.rs  messages.rs  sidebar.rs  statusbar.rs
binaries/kaem/src/tui/widgets/: topbar.rs
binaries/kaem/tests/: radio_link.rs
crates/kaem/: Cargo.toml
crates/kaem-channel/: Cargo.toml
crates/kaem-channel/src/: lib.rs
crates/kaem-codec/: Cargo.toml
crates/kaem-codec/src/: envelope.rs  lib.rs
crates/kaem-crypto/: Cargo.toml
crates/kaem-crypto/src/: algorithm.rs  config.rs  factory.rs  lib.rs  ml_kem_chacha.rs  symmetric.rs
crates/kaem-crypto/src/crypto/: algorithm.rs  config.rs  kyber_chacha.rs  mod.rs
crates/kaem-crypto/src/keys/: algorithm.rs  config.rs  mod.rs
crates/kaem-crypto/tests/: round_trip.rs
crates/kaem-fragment/: Cargo.toml
crates/kaem-link/: Cargo.toml
crates/kaem-link/src/: channel.rs  fragment.rs  lib.rs  loopback.rs  radio.rs  sim.rs  transport.rs  udp.rs
crates/kaem-loopback/: Cargo.toml
crates/kaem-loopback/src/: lib.rs
crates/kaem-mesh/: Cargo.toml
crates/kaem-mesh/src/: crypto_ops.rs  envelope.rs  event.rs  lib.rs  store_ops.rs  test_support.rs
crates/kaem-mesh/src/crypto/: config.rs  kyber_chacha.rs  mod.rs
crates/kaem-mesh/src/keys/: config.rs  ml_kem.rs  mod.rs
crates/kaem-mesh/src/pairing/: handshake.rs  identity.rs  mod.rs  store.rs
crates/kaem-modem/: Cargo.toml
crates/kaem-node/: Cargo.toml
crates/kaem-node/src/: lib.rs  model.rs  wire.rs
crates/kaem-pairing/: Cargo.toml
crates/kaem-pairing/src/: handshake.rs  identity.rs  lib.rs
crates/kaem-radio/: Cargo.toml
crates/kaem-radio/src/: channel.rs  lib.rs  modem.rs
crates/kaem-radio/src/backends/: loopback.rs  mod.rs  udp.rs
crates/kaem-radio/src/backends/sdr/: channel.rs  mod.rs
crates/kaem-sdr/: Cargo.toml
crates/kaem-sdr/src/: channel.rs  lib.rs
crates/kaem-sim/: Cargo.toml
crates/kaem-sim/src/: lib.rs
crates/kaem-transport/: Cargo.toml
crates/kaem-transport/src/: lib.rs
crates/kaem-udp/: Cargo.toml
crates/kaem-udp/src/: lib.rs
crates/kaem-wifi/: Cargo.toml
crates/kaem-wifi/src/: lib.rs
crates/kaem/src/: action.rs  app.rs  main.rs
crates/kaem/src/core/: chat.rs
crates/kaem/src/tui/screens/chat/widgets/: input.rs
crates/kaem/src/tui/widgets/: topbar.rs
crates/kaem/tests/: radio_link.rs  sdr_link.rs
docs/: SANDBOX_PLAN.md
src/: app.rs  datetime.rs  main.rs
src/codec/: crc.rs  mod.rs
src/core/: chat.rs  mod.rs  seed.rs
src/radio/: mod.rs
src/radio/backends/: loopback.rs  mod.rs  udp.rs
src/radio/backends/sdr/: channel.rs  mod.rs  modem.rs
src/tui/: app.rs  events.rs  mod.rs  render.rs  theme.rs
src/tui/screens/chat/: mod.rs
src/tui/screens/chat/widgets/: input.rs  messages.rs  mod.rs  sidebar.rs  statusbar.rs
