[workspace]
resolver = "3"
members = ["crates/*", "binaries/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# the link layer — the transport port + every link implementation
kaem-link = { path = "crates/kaem-link" }
# application
kaem-node = { path = "crates/kaem-node" }
kaem-mesh = { path = "crates/kaem-mesh" }
# crypto primitives
kaem-crypto = { path = "crates/kaem-crypto" }
# third-party
chrono = "0.4"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.1"
tui-input = "0.10"
unicode-width = "0.2"
# crypto
anyhow = "1.0.102"
chacha20poly1305 = "0.10.1"
getrandom = "0.4.2"
ml-kem = { version = "0.3.2", features = ["getrandom", "zeroize"] }
zeroize = "1"
rand = "0.10.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
# sandbox (egui)
eframe = "0.34.3"
egui = "0.34.3"
