[package]
name = "kaem-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
kaem-node.workspace = true
kaem-mesh.workspace = true
kaem-sim.workspace = true
kaem-radio.workspace = true
kaem-transport.workspace = true
eframe.workspace = true
egui.workspace = true
rand.workspace = true
