[package]
name = "kaem"
version.workspace = true
edition.workspace = true

[dependencies]
kaem-link.workspace = true
kaem-codec.workspace = true
kaem-node.workspace = true
chrono.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-input.workspace = true
unicode-width.workspace = true
