[package]
name = "kaem-mesh"
version.workspace = true
edition.workspace = true

[dependencies]
kaem-node.workspace = true
anyhow.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
ml-kem.workspace = true
rand.workspace = true
rusqlite.workspace = true
zeroize.workspace = true
