[package]
name = "kaem"
version.workspace = true
edition.workspace = true

[dependencies]
kaem-transport.workspace = true
kaem-codec.workspace = true
kaem-sdr.workspace = true
kaem-udp.workspace = true
kaem-wifi.workspace = true
kaem-loopback.workspace = true
chrono.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-input.workspace = true
unicode-width.workspace = true
